fixed svg & ajax-container overlap using min-vh-100 class

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -27,9 +27,8 @@ body {
     
     // Landing Section
     .landing_section {
-        height: 100vh;
         padding-top: 9.5rem;
-        padding-bottom: 5rem;
+        padding-bottom: 2rem;
     }
 
     // Ajax Container
